creation de deux entité : User et Article

--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=161c2e4406d4989ee151bd13d825814f
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="mysql:host=devbdd.iutmetz.univ-lorraine.fr/akniou1u_appli:31900870@127.0.0.1:3306/akniou1u_ProjetTutore2A?serverVersion=5.7"
+DATABASE_URL="mysql://root@127.0.0.1:3306/ProjetTutore2A"
 ###< doctrine/doctrine-bundle ###
