--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,10 +15,16 @@ security:
             security: false
         main:
             provider: in_database
+
             anonymous: ~
+
             form_login:
                 login_path: security_login
                 check_path: security_login
+            
+            logout:
+                path: security_logout
+                target: security_login
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
@@ -28,5 +34,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/profile, roles: ROLE_USER }
