--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,4 +35,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/modo, roles: ROLE_MODO }
+         - { path: ^/profil, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_MODO: ROLE_USER
+        ROLE_ADMIN: ROLE_MODO
